# lox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  main.cpp
ast/: BinOp.cpp  CMakeLists.txt  Num.cpp  UnaryOp.cpp  ast.ixx
ast/include/: BinOp.h  Node.h  Num.h  UnaryOp.h  Visitor.h
core/: CMakeLists.txt  Token.cpp  core.ixx
core/include/: Token.h  TokenTypes.h
interpreter/: CMakeLists.txt  Interpreter.cpp  enviroment.ixx  interpreter.cpp  interpreter.ixx  loxcallable.ixx  loxclass.ixx
interpreter/include/: Interpreter.h
lexer/: CMakeLists.txt  Lexer.cpp  lexer.ixx
lexer/include/: Lexer.h
logger/: CMakeLists.txt  log.ixx
parser/: CMakeLists.txt  Parser.cpp  parser.ixx
parser/include/: Parser.h
resolver/: CMakeLists.txt  resolver.ixx
tests/: CMakeLists.txt
tests/arithmetic/: CMakeLists.txt  tests.cpp
tools/: CMakeLists.txt
tools/ast_builder/: CMakeLists.txt  main.cpp
tools/ast_generator/: CMakeLists.txt  main.cpp
tools/ast_printer/: CMakeLists.txt  ast_printer.ixx
tools/scope_exit/: CMakeLists.txt  scope_exit.h
